Include media queries to avoid flash messages from overlapping with content when width is smaller. Include media queries to center nav links of profile when screen width decreases.

--- a/game/app/assets/stylesheets/application.css
+++ b/game/app/assets/stylesheets/application.css
@@ -65,6 +65,18 @@ a {
   margin-top: 2%;
 }
 
+@media (max-width: 650px) {
+  .flash-notice, .flash-alert {
+    margin-bottom: 5%;
+  }
+}
+
+@media (max-width: 400px) {
+  .flash-notice, .flash-alert {
+    margin-bottom: 10%;
+  }
+}
+
 .flash-notice span {
   background-color: #dbf8d2;
   padding: 8px;
