--- a/game/app/assets/stylesheets/profile.css
+++ b/game/app/assets/stylesheets/profile.css
@@ -3,7 +3,6 @@
     align-items: flex-end;
 }
 
-
 .profile-links-nav {
     display: flex;
     justify-content: space-between;
@@ -17,6 +16,19 @@
     display:flex;
     gap: 20px;
     margin-right: 5%;
+}
+
+@media (max-width: 345px) {
+    .profile-links-nav{
+      justify-content: space-evenly;
+      margin-right: 5%;
+    }
+  }
+
+@media (max-width: 285px) {
+    .profile-links-nav{
+        gap: 12px;
+      }
 }
 
 .decor-button2 {
